Added main pages, Just need each individual project page

--- a/about.html
+++ b/about.html
@@ -17,8 +17,8 @@
       <div id="logo"><h1>XANNAS<a href="#">NOOK</a></h1></div>
       <nav>
         <ul class="lavaLampWithImage" id="lava_menu">
-          <li class="current"><a href="index.html">home</a></li>
-          <li><a href="about.html">about me</a></li>
+          <li><a href="index.html">home</a></li>
+          <li class="current"><a href="about.html">about me</a></li>
           <li><a href="portfolio.html">my portfolio</a></li>
           <li><a href="blog.html">blog</a></li>
           <li><a href="contact.html">contact</a></li>
@@ -37,17 +37,13 @@
         </div>
       </div>
       <div id="content">
-        <h1>Welcome to The Nook</h1>
-        <p>I am a game design student who is currently attending DigiPen Institute of technology.</p>
-        <p>My github can be found at <a href="https://github.com/XannasNook">github.com/XannasNook</a>.</p>
-        <h2>Project List</h2>
-        <p>The projects that I have worked on or am currently working on are:</p>
-        <ul>
-          <li>Fish Fear Me</li>
-          <li>Attempting Fate</li>
-          <li>Quality Computer Battles</li>
-          <li>As You Stare</li>
-        </ul>
+        <h1>About Me</h1>
+        <p>
+          Hi! I'm Xanna. A Seattle-based programmer. I have been interested in being a developer since I could talk. I taught myself Unity at 9 and have been making games ever since. I started working as a programmer for an online vrchat community called "Automated Souls". After years of hard work I got into DigiPen, my dream school. At digipen I have learned many industry standards and have strengthened myself as a gameplay programmer. 
+        </p>
+        <p>
+          I have worked on many projects that you can see on my portfolio. Before going to DigiPen, I participated as the programmer in the month-long GCPL game jam with a designer friend, where we made the game "As You Stare". That game jam taught me an immense amount, as it was my first finished and published game. Since then, I have worked on 3 game projects at DigiPen: "Quality Computer Battles" as a gameplay programmer, "Attempting Fate" as an engine and scripting programmer, and I am currently working on "Fish Fear Me" as Technical Lead.
+        </p>
       </div>
     </div>
     <footer>
