--- a/blog.html
+++ b/blog.html
@@ -17,17 +17,17 @@
       <div id="logo"><h1>XANNAS<a href="#">NOOK</a></h1></div>
       <nav>
         <ul class="lavaLampWithImage" id="lava_menu">
-          <li class="current"><a href="index.html">home</a></li>
+          <li><a href="index.html">home</a></li>
           <li><a href="about.html">about me</a></li>
           <li><a href="portfolio.html">my portfolio</a></li>
-          <li><a href="blog.html">blog</a></li>
+          <li class="current"><a href="blog.html">blog</a></li>
           <li><a href="contact.html">contact</a></li>
         </ul>
       </nav>
     </header>
     <div id="site_content">
       <div id="sidebar_container">
-        <div class="gallery">
+        <div id="gallery">
           <ul class="images">
             <li class="show"><img width="450" height="450" src="images/Attempting_Fate_Poster.png" alt="photo_one" /></li>
             <li><img width="450" height="450" src="images/FFMLogo.png" alt="photo_two" /></li>
@@ -37,17 +37,11 @@
         </div>
       </div>
       <div id="content">
-        <h1>Welcome to The Nook</h1>
-        <p>I am a game design student who is currently attending DigiPen Institute of technology.</p>
-        <p>My github can be found at <a href="https://github.com/XannasNook">github.com/XannasNook</a>.</p>
-        <h2>Project List</h2>
-        <p>The projects that I have worked on or am currently working on are:</p>
-        <ul>
-          <li>Fish Fear Me</li>
-          <li>Attempting Fate</li>
-          <li>Quality Computer Battles</li>
-          <li>As You Stare</li>
-        </ul>
+        <h1>Blog</h1>
+        <div id="blog_container">
+          No blog posts yet!! Keep an eye out!
+        </div>
+        <p></p>
       </div>
     </div>
     <footer>
