added project pages

--- a/portfolio.html
+++ b/portfolio.html
@@ -78,7 +78,7 @@
                   </p>
                 </div>
                 <div>
-                  <a class="btn-inline" href="projects/FishFearMe.html">more</a>
+                  <a class="btn-inline" href="projects/AttemptingFate.html">more</a>
                 </div>
               </div>
             </div>
@@ -100,7 +100,7 @@
                   </p>
                 </div>
                 <div>
-                  <a class="btn-inline" href="projects/FishFearMe.html">more</a>
+                  <a class="btn-inline" href="projects/QualityComputerBattles.html">more</a>
                 </div>
               </div>
             </div>
@@ -122,7 +122,7 @@
                   </p>
                 </div>
                 <div>
-                  <a class="btn-inline" href="projects/FishFearMe.html">more</a>
+                  <a class="btn-inline" href="projects/AsYouStare.html">more</a>
                 </div>
               </div>
             </div>
