--- a/projects/FishFearMe.html
+++ b/projects/FishFearMe.html
@@ -35,7 +35,13 @@
       </div>
       <div id="content">
         <h1>Fish Fear Me</h1>
-        <p>Unfinished description</p>
+        <p>Fish Fear Me is an absurdist, open-world, fishing creature-collector made in C++ with OpenGL and FMOD and is a school project. In Fish Fear Me, you roam an open world where you catch fish through a rhythm-like fishing mechanic. Which fish you get is calculated by a dynamically updating system, with fish "hotspots", and as you complete regions, you unlock new areas with new types of fish.</p>
+        <p>
+          I worked as the Tech Lead on the custom engine for Fish Fear Me. I created the underlying ECS structure, which stores entities as indices that can be used to find components in a data hashmap. 
+        </p>
+        <p>
+          This project is currently ongoing, and is set to release Q2 of 2026.
+        </p>
         
       </div>
     </div>
