Updated pages and added icon

--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
   <meta name="description" content="Portfolio for game developer 'Xanna Divine" />
   <meta name="keywords" content="Game developer, portfolio, game, design, computer science, projects, xanna, divine, blog, design, c++" />
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+  <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico" />
   <link rel="stylesheet" type="text/css" href="css/style.css" />
   <!-- modernizr enables HTML5 elements and feature detects -->
   <script type="text/javascript" src="js/modernizr-1.5.min.js"></script>
@@ -39,7 +40,7 @@
       <div id="content">
         <h1>About Me</h1>
         <p>
-          Hi! I'm Xanna. A Seattle-based programmer. I have been interested in being a developer since I could talk. I taught myself Unity at 9 and have been making games ever since. I started working as a programmer for an online vrchat community called "Automated Souls". After years of hard work I got into DigiPen, my dream school. At digipen I have learned many industry standards and have strengthened myself as a gameplay programmer. 
+          Hi! I'm Xanna, a programmer based in Seattle. I've been interested in being a developer since I could talk. I taught myself Unity at 9 and have been making games ever since. I started working as a programmer for an online VRChat community called "Automated Souls". After years of hard work I got into DigiPen, my dream school. At digipen I have learned many industry standards and have strengthened myself as a gameplay programmer. 
         </p>
         <p>
           I have worked on many projects that you can see on my portfolio. Before going to DigiPen, I participated as the programmer in the month-long GCPL game jam with a designer friend, where we made the game "As You Stare". That game jam taught me an immense amount, as it was my first finished and published game. Since then, I have worked on 3 game projects at DigiPen: "Quality Computer Battles" as a gameplay programmer, "Attempting Fate" as an engine and scripting programmer, and I am currently working on "Fish Fear Me" as Technical Lead.
