--- a/projects/AsYouStare.html
+++ b/projects/AsYouStare.html
@@ -6,6 +6,7 @@
   <meta name="description" content="Portfolio for game developer 'Xanna Divine" />
   <meta name="keywords" content="Game developer, portfolio, game, design, computer science, projects, xanna, divine, blog, design, c++" />
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+  <link rel="shortcut icon" type="image/x-icon" href="../images/favicon.ico" />
   <link rel="stylesheet" type="text/css" href="../css/style.css" />
   <!-- modernizr enables HTML5 elements and feature detects -->
   <script type="text/javascript" src="js/modernizr-1.5.min.js"></script>
@@ -35,7 +36,8 @@
       </div>
       <div id="content">
         <h1>As You Stare</h1>
-        <p>Unfinished description</p>
+        <p>This game was made for the 2024 GCPL game jam. I played the role of programmer in partnership with LittleJedi007 as the artist and designer. The theme of the jam was "Tales from the abyss" and therefore we took inspiration from the phrase "as you stare into the abyss, the abyss stares back at you" to make a horror game about diving into an ocean trench to gather materials, doing your best to hide from creatures that come to kill you.</p>
+        <p>This game is available for download on <a href="https://xannaogg.itch.io/as-you-stare">itch.io</a>.</p>
         
       </div>
     </div>
@@ -45,10 +47,9 @@
     </footer>
   </div>
   <!-- javascript at the bottom for fast page loading -->
-  <script type="text/javascript" src="js/jquery.min.js"></script>
-  <script type="text/javascript" src="js/jquery.easing.min.js"></script>
-  <script type="text/javascript" src="js/jquery.lavalamp.min.js"></script>
-  <script type="text/javascript" src="js/image_fade.js"></script>
+  <script type="text/javascript" src="../js/jquery.min.js"></script>
+  <script type="text/javascript" src="../js/jquery.easing.min.js"></script>
+  <script type="text/javascript" src="../js/jquery.lavalamp.min.js"></script>
   <script type="text/javascript">
     $(function() {
       $("#lava_menu").lavaLamp({
