--- a/projects/AttemptingFate.html
+++ b/projects/AttemptingFate.html
@@ -6,6 +6,7 @@
   <meta name="description" content="Portfolio for game developer 'Xanna Divine" />
   <meta name="keywords" content="Game developer, portfolio, game, design, computer science, projects, xanna, divine, blog, design, c++" />
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+  <link rel="shortcut icon" type="image/x-icon" href="../images/favicon.ico" />
   <link rel="stylesheet" type="text/css" href="../css/style.css" />
   <link rel="stylesheet" href="../css/prism.css" />
   <!-- modernizr enables HTML5 elements and feature detects -->
@@ -42,22 +43,20 @@
         <p>
           I worked as a gameplay and engine programmer for this project. My biggest contribution being the custom scripting language, which allowed our narrative writer the ability to change backgrounds, add dialogue options, go to and return from, play animations, and change the currently displayed character. This was done through C string manipulation and text display. Below is a code snippet of the main script parsing function, which looped through the text to get commands.
         </p>
-        <pre data-src="AttemptingFate.c">
-        </pre>
-        
+		<p>This game is currently unavailable for public download.</p>
       </div>
     </div>
+	<div style="height:550px;overflow:auto;"><pre data-src="AttemptingFate.c" class="line-numbers"></pre></div>
     <footer>
       <p><a href="../index.html">home</a> | <a href="../about.html">about me</a> | <a href="../portfolio.html">my portfolio</a> | <a href="../blog.html">blog</a> | <a href="../contact.html">contact</a></p>
       <p><a href="http://www.css3templates.co.uk">design from css3templates.co.uk</a></p>
     </footer>
   </div>
   <!-- javascript at the bottom for fast page loading -->
-  <script type="text/javascript" src="js/jquery.min.js"></script>
-  <script type="text/javascript" src="js/jquery.easing.min.js"></script>
-  <script type="text/javascript" src="js/jquery.lavalamp.min.js"></script>
-  <script type="text/javascript" src="js/image_fade.js"></script>
-  <script src="js/prism.js"></script>
+  <script type="text/javascript" src="../js/jquery.min.js"></script>
+  <script type="text/javascript" src="../js/jquery.easing.min.js"></script>
+  <script type="text/javascript" src="../js/jquery.lavalamp.min.js"></script>
+  <script src="../js/prism.js"></script>
   <script type="text/javascript">
     $(function() {
       $("#lava_menu").lavaLamp({
