--- a/projects/QualityComputerBattles.html
+++ b/projects/QualityComputerBattles.html
@@ -28,15 +28,16 @@
     <div id="site_content">
       <div id="sidebar_container">
         <div class="gallery">
-          <ul class="images">
-            <li><img width="450" height="450" src="../images/JAX_logo.png" alt="photo_two" /></li>
+          <ul class="images-wide">
+            <li><img width="900" height="380" src="../images/JAX_logo.png" alt="photo_two" /></li>
           </ul>
         </div>
       </div>
-      <div id="content">
+      <div id="site_content">
         <h1>Quality Computer Battles</h1>
-        <p>Unfinished description</p>
-        
+        <p>Quality Computer Battles is a simple dungeon-crawling shoot-em-up game themed around fixing bugs in a computer as a QA tester.</p>
+        <p>This was a short project, about 4 weeks long. It was used as an introduction to game engines and making games in the C language</p>
+        <p>This project is unavailable for public download.</p>
       </div>
     </div>
     <footer>
@@ -45,10 +46,9 @@
     </footer>
   </div>
   <!-- javascript at the bottom for fast page loading -->
-  <script type="text/javascript" src="js/jquery.min.js"></script>
-  <script type="text/javascript" src="js/jquery.easing.min.js"></script>
-  <script type="text/javascript" src="js/jquery.lavalamp.min.js"></script>
-  <script type="text/javascript" src="js/image_fade.js"></script>
+  <script type="text/javascript" src="../js/jquery.min.js"></script>
+  <script type="text/javascript" src="../js/jquery.easing.min.js"></script>
+  <script type="text/javascript" src="../js/jquery.lavalamp.min.js"></script>
   <script type="text/javascript">
     $(function() {
       $("#lava_menu").lavaLamp({
