--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
   <meta name="description" content="Portfolio for game developer 'Xanna Divine" />
   <meta name="keywords" content="Game developer, portfolio, game, design, computer science, projects, xanna, divine, blog, design, c++" />
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+  <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico" />
   <link rel="stylesheet" type="text/css" href="css/style.css" />
   <!-- modernizr enables HTML5 elements and feature detects -->
   <script type="text/javascript" src="js/modernizr-1.5.min.js"></script>
@@ -29,71 +30,28 @@
       <div id="sidebar_container">
         <div id="gallery">
           <ul class="images">
-            <li class="show"><img width="450" height="450" src="images/1.jpg" alt="photo_one" /></li>
-            <li><img width="450" height="450" src="images/2.jpg" alt="photo_two" /></li>
-            <li><img width="450" height="450" src="images/3.jpg" alt="photo_three" /></li>
-            <li><img width="450" height="450" src="images/4.jpg" alt="photo_four" /></li>
-            <li><img width="450" height="450" src="images/5.jpg" alt="photo_five" /></li>
+            <li class="show"><img width="450" height="450" src="images/Attempting_Fate_Poster.png" alt="photo_one" /></li>
+            <li><img width="450" height="450" src="images/FFMLogo.png" alt="photo_two" /></li>
+            <li><img width="450" height="450" src="images/JAX_logo.png" alt="photo_three" /></li>
+            <li><img width="450" height="450" src="images/As You Stare.png" alt="photo_four" /></li>
           </ul>
         </div>
       </div>
       <div id="content">
         <h1>Contact</h1>
-        <?php
-          // Set-up these 3 parameters
-          // 1. Enter the email address you would like the enquiry sent to
-          // 2. Enter the subject of the email you will receive, when someone contacts you
-          // 3. Enter the text that you would like the user to see once they submit the contact form
-          $to = 'email@emailaddress.com';
-          $subject = 'Enquiry from the website';
-          $contact_submitted = 'Your message has been sent.';
+        <p>Business Email - XannaDivine@gmail.com</p>
+        <p>Discord - xannas_here</p>
+        <p><a href="https://linkedin.com/in/xan-fuller">LinkedIn</a></p>
+        <p><a href="https://github.com/XannasNook">Github</a></p>
+        <p><a href="https://xannaogg.itch.io">Itch.io</a></p>
+        <!-- <p><a href="#">YouTube</a></p> -->
 
-          // Do not amend anything below here, unless you know PHP
-          function email_is_valid($email) {
-            return preg_match('/^[A-Z0-9._%+-]+@[A-Z0-9.-]+\.[A-Z]{2,4}$/i',$email);
-          }
-          if (!email_is_valid($to)) {
-            echo '<p style="color: red;">You must set-up a valid (to) email address before this contact page will work.</p>';
-          }
-          if (isset($_POST['contact_submitted'])) {
-            $return = "\r";
-            $youremail = trim(htmlspecialchars($_POST['your_email']));
-            $yourname = stripslashes(strip_tags($_POST['your_name']));
-            $yourmessage = stripslashes(strip_tags($_POST['your_message']));
-            $contact_name = "Name: ".$yourname;
-            $message_text = "Message: ".$yourmessage;
-            $user_answer = trim(htmlspecialchars($_POST['user_answer']));
-            $answer = trim(htmlspecialchars($_POST['answer']));
-            $message = $contact_name . $return . $message_text;
-            $headers = "From: ".$youremail;
-            if (email_is_valid($youremail) && !eregi("\r",$youremail) && !eregi("\n",$youremail) && $yourname != "" && $yourmessage != "" && substr(md5($user_answer),5,10) === $answer) {
-              mail($to,$subject,$message,$headers);
-              $yourname = '';
-              $youremail = '';
-              $yourmessage = '';
-              echo '<p style="color: blue;">'.$contact_submitted.'</p>';
-            }
-            else echo '<p style="color: red;">Please enter your name, a valid email address, your message and the answer to the simple maths question before sending your message.</p>';
-          }
-          $number_1 = rand(1, 9);
-          $number_2 = rand(1, 9);
-          $answer = substr(md5($number_1+$number_2),5,10);
-        ?>
-        <form id="contact" action="contact.html" method="post">
-          <div class="form_settings">
-            <p><span>Name</span><input class="contact" type="text" name="your_name" value="<?php echo $yourname; ?>" /></p>
-            <p><span>Email Address</span><input class="contact" type="text" name="your_email" value="<?php echo $youremail; ?>" /></p>
-            <p><span>Message</span><textarea class="contact textarea" rows="5" cols="50" name="your_message"><?php echo $yourmessage; ?></textarea></p>
-            <p style="padding: 10px 0; line-height: 2em;">To help prevent spam, please enter the answer to this question:</p>
-            <p><span><?php echo $number_1; ?> + <?php echo $number_2; ?> = ?</span><input type="text" name="user_answer" /><input type="hidden" name="answer" value="<?php echo $answer; ?>" /></p>
-            <p style="padding-top: 15px"><span>&nbsp;</span><input class="submit" type="submit" name="contact_submitted" value="send" /></p>
-          </div>
-        </form>
+
       </div>
     </div>
     <footer>
       <p><a href="index.html">home</a> | <a href="about.html">about me</a> | <a href="portfolio.html">my portfolio</a> | <a href="blog.html">blog</a> | <a href="contact.html">contact</a></p>
-      <p>&copy; 2012 my portfolio two. All Rights Reserved. | <a href="http://www.css3templates.co.uk">design from css3templates.co.uk</a></p>
+      <p><a href="http://www.css3templates.co.uk">design from css3templates.co.uk</a></p>
     </footer>
   </div>
   <!-- javascript at the bottom for fast page loading -->
