--- a/contact.html
+++ b/contact.html
@@ -23,6 +23,7 @@
           <li><a href="portfolio.html">my portfolio</a></li>
           <li><a href="blog.html">blog</a></li>
           <li class="current"><a href="contact.html">contact</a></li>
+          <li><a href="Resume.pdf">resume</a></li>
         </ul>
       </nav>
     </header>
