--- a/projects/QualityComputerBattles.html
+++ b/projects/QualityComputerBattles.html
@@ -6,6 +6,7 @@
   <meta name="description" content="Portfolio for game developer 'Xanna Divine" />
   <meta name="keywords" content="Game developer, portfolio, game, design, computer science, projects, xanna, divine, blog, design, c++" />
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+  <link rel="shortcut icon" type="image/x-icon" href="../images/favicon.ico" />
   <link rel="stylesheet" type="text/css" href="../css/style.css" />
   <!-- modernizr enables HTML5 elements and feature detects -->
   <script type="text/javascript" src="js/modernizr-1.5.min.js"></script>
@@ -17,11 +18,12 @@
       <div id="logo"><h1>XANNAS<a href="#">NOOK</a></h1></div>
       <nav>
         <ul class="lavaLampWithImage" id="lava_menu">
-          <li class="current"><a href="../index.html">home</a></li>
+          <li><a href="../index.html">home</a></li>
           <li><a href="../about.html">about me</a></li>
-          <li><a href="../portfolio.html">my portfolio</a></li>
+          <li class="current"><a href="../portfolio.html">my portfolio</a></li>
           <li><a href="../blog.html">blog</a></li>
           <li><a href="../contact.html">contact</a></li>
+          <li><a href="../Resume.pdf">resume</a></li>
         </ul>
       </nav>
     </header>
